[package]
name = "jojo-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
driver = ["dep:enigo"]

[dependencies]
enigo = { version = "0.1.3", features = ["with_serde"], optional = true }
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
serde_json = "1.0.107"